Closed
Bug 1618718
Opened 6 years ago
Closed 6 years ago
support aria-pressed
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla76
| Tracking | Status | |
|---|---|---|
| firefox76 | --- | verified |
People
(Reporter: eeejay, Assigned: eeejay)
Details
(Whiteboard: [mac2020_1])
Attachments
(1 file)
STR:
- Load https://a11ysupport.io/tests/html/aria/aria-pressed_examples.html
- Arrow through buttons
Expected:
You should hear "toggle button" and the state, pressed or mixed, or omitted if it is not pressed.
The last button you should hear the new state when activating.
Actual:
Only "button" is announced
Note:
Safari and chrome don't announce the mixed state when it is toggled.
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → eitan
| Assignee | ||
Updated•6 years ago
|
Priority: P2 → P1
| Assignee | ||
Comment 1•6 years ago
|
||
Updated•6 years ago
|
Attachment #9133311 -
Attachment description: Bug 1618718 - Support AXToggle subrole and statets. r?morgan → Bug 1618718 - Support AXToggle subrole and states. r?morgan
Updated•6 years ago
|
Status: NEW → ASSIGNED
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/cee8de737677
Support AXToggle subrole and states. r=morgan
Comment 3•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox76:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
Updated•5 years ago
|
Flags: qe-verify+
Comment 4•5 years ago
|
||
Confirmed that using an old Nightly (2020-02-27) only the first button is announced by VoiceOver as "Button", also verified that using latest Beta build 76.0b4, all the buttons and their state are announced.
You need to log in
before you can comment on or make changes to this bug.
Description
•