Bug 1618718 - Support AXToggle subrole and states. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D66841